# autosing

./: .gitignore  .gitmodules  README.md  pyproject.toml
autosing/: alignment.py  artist_embeddings.py  bn_whisper.py  codecs.py  construct_dataset.py  dataset_viewer.py  fc_model.py  processing.py  simple_dataset.py  sing.py  sm2a.py  t2s.py  train.py
